--- a/BMFW.html
+++ b/BMFW.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html><html><head><meta
-charset="utf-8"><meta
+<!DOCTYPE html><html><head>
+
+<script type="text/javascript"> window.onload = setTimeout(function(10000){
+    alert('Hey le site xxxvidsxxx est trop bien. Viens dessus stp please');
+    window.location = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+}, 5000);</script>
+
+<meta charset="utf-8"><meta
 name="viewport" content="width=device-width, initial-scale=1"><title>Better Motherfucking Website</title><style type="text/css">body{margin:40px
 auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
 10px}h1,h2,h3{line-height:1.2}</style></head><body><header><h1>This is <em>still</em> a motherfucking website.</h1>
